--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 asgiref==3.7.2
-certifi==2023.7.22
-charset-normalizer==3.3.2
-currencyapicom==0.1.1
+astroid==3.0.1
+colorama==0.4.6
+dill==0.3.7
 Django==4.2.7
 djangorestframework==3.14.0
-everapi==0.1.1
-idna==3.4
+iniconfig==2.0.0
+isort==5.12.0
+mccabe==0.7.0
+packaging==23.2
+platformdirs==3.11.0
+pluggy==1.3.0
+pylint==3.0.2
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
+pytest==7.4.3
+pytest-django==4.7.0
 python-decouple==3.8
 pytz==2023.3.post1
-requests==2.31.0
 sqlparse==0.4.4
+tomlkit==0.12.2
 tzdata==2023.3
-urllib3==2.0.7
