--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.7.2
 astroid==3.0.1
+certifi==2023.7.22
+charset-normalizer==3.3.2
 colorama==0.4.6
 dill==0.3.7
 Django==4.2.7
 djangorestframework==3.14.0
+idna==3.4
 iniconfig==2.0.0
 isort==5.12.0
 mccabe==0.7.0
@@ -17,6 +20,8 @@ pytest==7.4.3
 pytest-django==4.7.0
 python-decouple==3.8
 pytz==2023.3.post1
+requests==2.31.0
 sqlparse==0.4.4
 tomlkit==0.12.2
 tzdata==2023.3
+urllib3==2.0.7
