--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 dill==0.3.7
 Django==4.2.7
+django-filter==23.3
 djangorestframework==3.14.0
 idna==3.4
 iniconfig==2.0.0
